package app;

public interface KomponenFasilitas {
    String getDeskripsi();
    double getBiaya();
}
