classDiagram
    direction LR
    class KomponenFasilitas {
      <<interface>>
      +getDeskripsi() String
      +getBiaya() double
    }
    class Fasilitas
    class PaketFasilitas {
      +tambah(KomponenFasilitas) PaketFasilitas
      +getItem() List~KomponenFasilitas~
    }
    KomponenFasilitas <|.. Fasilitas
    KomponenFasilitas <|.. PaketFasilitas
    PaketFasilitas o-- KomponenFasilitas : contains
